[project]
name = "agentic-rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "aatika-hakim", email = "aatikahakim90@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "crawl4ai>=0.7.3",
]

[project.scripts]
agentic-rag-chatbot = "agentic_rag_chatbot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
